Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-2356] fixed error when perform group actions creating item (Vedmak)
 - [ZBX-2355] fixed error when try to massupdate trigger severity (Vedmak)
 - [ZBX-2354] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-2352] fixed typo in the default locale (Richlv)
 - [ZBX-2312] fixed event order in "monitoring triggers" and "last 20 events" (Vedmak)
 - [ZBX-2264] added opportunity to translate class.cuser.php and config.inc.php (AM)
 - [ZBX-2132] added date format constants to locales, changed zbx_date2str function to meet regional formats and date translation (AM)
 - [ZBXNEXT-311] improved the speed of dbconfig synchronization (Sasha)
 - [ZBX-2329] fixed screen renaming (Aly)
 - [ZBX-2315] fixed multiple issues with JS scrollbar (Aly)
 - [ZBX-2321] fixed log items appearing in the wrong order (Alexei,asaveljevs,Sasha)
 - [DEV-458] added marks on maps if elements trigger changed status recently (Aly)
 - [ZBX-2290] added export/import of map images (Vedmak)
 - [ZBX-2290] fixed image update with oracle db (Vedmak)
 - [ZBX-2317] updated French translation; thanks to alixen (Richlv)
 - [ZBX-2283] fixed incorrect time calculating in slidebar (Aly)
 - [ZBX-2261] fixed username hiding in acknowledge comments (AM)
 - [ZBX-2305] fixed actions getting lost in an event-busy environment (asaveljevs)
 - [ZBX-2303] fixed GET/POST methods in processing web scenario steps. Thanks to Hannu Ylitalo (Sasha)
 - [ZBXNEXT-293] processes now provide more information on why they terminate (asaveljevs)
 - [ZBX-2304] fixed "no permission" error when screen contains simple graphs with web item (Vedmak)
 - [ZBX-2268] denied creation of pie/exploded graphs with more than one sum item (Vedmak)