@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2362] fixed processing of logrt[] checks under Windows (Sasha)
  - [ZBX-2356] fixed error when perform group actions creating item (Vedmak)
  - [ZBX-2355] fixed error when try to massupdate trigger severity (Vedmak)
  - [ZBX-2354] updated Russian translation; thanks to dotneft (Richlv)
